--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,30 +1,26 @@
 #---------------------------------------------------------------------
 # GitHub Action Workflow Basics
-#
-# Version      Date        Info
-# 1.0          2019        Initial Version
-#
-# Made by Denis Astahov ADV-IT Copyleft (c) 2019
 #---------------------------------------------------------------------
 name: My-GitHubActions-Basics
 env:
-  APPLICATION_NAME    : "MyFlask"
-  DEPLOY_PACKAGE_NAME : "flask-deploy-ver-${{ github.sha }}"
+  APPLICATION_NAME    : "MyExample"
+  DEPLOY_VERSION : "deploy-ver-${{ github.sha }}"
 
-on: 
+on:
   push:
     branches: 
       - master
+      
 
 jobs:
-  my_testing:
+  stage_1:
     runs-on: ubuntu-latest
 
     steps:
     - name: Print Hello Message in Testing
       run : echo "Hello World from Testing job"
     
-    - name: Execure few commands
+    - name: Execute few commands
       run : |
         echo "Hello Message1"
         echo "Hello Message2"
@@ -39,9 +35,9 @@ jobs:
     - name: List current folder
       run : ls -la
   
-  my_deploy:
+  stage_2:
     runs-on: ubuntu-latest
-    needs: [my_testing]
+    needs: [stage_1]
     env:
       VAR1 : "This is Job Level Variable1"
       VAR2 : "This is Job Lebel Variable2"
